FusionDev Backup1/src/objects/Sales_Target__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Lines__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Lines</label>
        <referenceTo>Invoice_Lines__c</referenceTo>
        <relationshipLabel>Sales Targets</relationshipLabel>
        <relationshipName>Sales_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Sales Targets</relationshipLabel>
        <relationshipName>Sales_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month_YTD_Calc__c</fullName>
        <description>Determines the month number of the current month (based on today) and compares sales target start date for all years to determine if this value should be included in YOY YTD reporting.  Returns TRUE if the month number of the start date is equal or less than the current month.  Used in reporting.</description>
        <formula>MONTH( Start_Date__c )&lt;= MONTH(Today())</formula>
        <inlineHelpText>Determines the month number of the current month (based on today) and compares sales target start date for all years to determine if this value should be included in YOY YTD reporting.</inlineHelpText>
        <label>Month (YTD Calc)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <description>Returns the month, a number between 1 (January) and 12 (December) of the sales target start date</description>
        <formula>MONTH( Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Returns the month, a number between 1 (January) and 12 (December) of the sales target start date</inlineHelpText>
        <label>Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <description>Sales Target product category, if target is specific to product category</description>
        <inlineHelpText>Sales Target product category, if target is specific to product category</inlineHelpText>
        <label>Product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sales Targets</relationshipLabel>
        <relationshipName>Sales_Targets_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <label>Sales Rep</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start date of sales target period</description>
        <inlineHelpText>Start date of sales target period</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Amount__c</fullName>
        <label>Target Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Amounts__c</fullName>
        <label>Target Amounts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>ALT</fullName>
                </value>
                <value>
                    <fullName>ALTA</fullName>
                </value>
                <value>
                    <fullName>asdfa</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AZNM</fullName>
                </value>
                <value>
                    <fullName>BBD</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>CALN</fullName>
                </value>
                <value>
                    <fullName>CALS</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FLN</fullName>
                </value>
                <value>
                    <fullName>FLS</fullName>
                </value>
                <value>
                    <fullName>GASC</fullName>
                </value>
                <value>
                    <fullName>GASCTN</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>INMI</fullName>
                </value>
                <value>
                    <fullName>INT</fullName>
                </value>
                <value>
                    <fullName>KOWV</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LARK</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MAN</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Used in reporting to allowing sum/count of records in calculated reports</description>
        <inlineHelpText>Used in reporting to allowing sum/count of records in calculated reports</inlineHelpText>
        <label>Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Returns the year of a date, a number between 1900 and 9999, of the sales target start date</description>
        <formula>YEAR( Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Returns the year of a date, a number between 1900 and 9999, of the sales target start date</inlineHelpText>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sales Target</label>
    <listViews>
        <fullName>All_LastMonth</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Year__c</columns>
        <columns>Month__c</columns>
        <columns>Product_Category__c</columns>
        <columns>Target_Amount__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>All (Last Month)</label>
    </listViews>
    <listViews>
        <fullName>All_Sales_Targets</fullName>
        <columns>NAME</columns>
        <columns>Territory__c</columns>
        <columns>Quarter__c</columns>
        <columns>Target_Amounts__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Target_Amount__c</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Description__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Sales Targets</label>
    </listViews>
    <listViews>
        <fullName>All_Sales_Targets_Jan_2015</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Product_Category__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Target_Amount__c</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Description__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>1/1/2015</value>
        </filters>
        <label>All Sales Targets (Jan 2015)</label>
    </listViews>
    <listViews>
        <fullName>All_Sales_Targets_this_Month</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Product_Category__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Target_Amount__c</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Description__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>All Sales Targets (This Month)</label>
    </listViews>
    <listViews>
        <fullName>All_Sales_Targets_withoutTerritory</fullName>
        <columns>NAME</columns>
        <columns>Territory__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Product_Category__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Target_Amount__c</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Description__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Territory__c</field>
            <operation>equals</operation>
            <value>AZNM</value>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>THIS_QUARTER</value>
        </filters>
        <label>All Sales Targets (test)</label>
    </listViews>
    <nameField>
        <label>Sales Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Product_Category_Coolers_or_All_Other</fullName>
        <active>false</active>
        <description>Do not allow save of record if product category is not equal to &quot;Coolers&quot; or &quot;All Other&quot;</description>
        <errorConditionFormula>AND(
 Product_Category__c &lt;&gt; &quot;All Other&quot;,
 Product_Category__c &lt;&gt; &quot;Coolers&quot;
)</errorConditionFormula>
        <errorDisplayField>Product_Category__c</errorDisplayField>
        <errorMessage>Product category should equal &quot;Coolers&quot; or &quot;All Other&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_End_Date_Cannot_be_same_date</fullName>
        <active>true</active>
        <description>The start date and end date should not be the same date</description>
        <errorConditionFormula>Start_Date__c = End_Date__c</errorConditionFormula>
        <errorMessage>The start date must begin on the first day of the month and the end date should be the last day of the month.  Review start date and end date and adjust.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_Required_to_be_first_of_month</fullName>
        <active>true</active>
        <description>The start date must begin on the first day of the month</description>
        <errorConditionFormula>DAY( Start_Date__c ) &lt;&gt; 1</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>The start date must begin on the first day of the month</errorMessage>
    </validationRules>
</CustomObject>